# StickyWickets

./: CMakeLists.txt  README.md  package.xml
launch/: core.launch  sticky_wickets.launch  viewing.launch
map/: crochet_hall.pgm  crochet_hall.yaml
src/: mover.py  object_detect.py  sign_handler.py
