<?xml version="1.0"?>
<package>
  <name>sticky_wickets</name>
  <version>1.0.0</version>
  <description>The sticky_wickets package</description>

  <maintainer email="hannaj@union.edu">Jonny Hanna</maintainer>
  <maintainer email="garcian@union.edu">Nick Garcia</maintainer>

  <license>Educational</license>

  <url type="git">https://github.com/JonathanHanna/CSC325-StickyWickets</url>

  <author email="hannaj@union.edu">Jonny Hanna</author>
  <author email="garcian@union.edu">Nick Garcia</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
